force-app/main/default/objects/Lobbying_Expenditure__c/Lobbying_Expenditure__c.object-meta.xml
<CustomObject>
    <label>Lobbying Expenditure</label>
    <nameField>
        <displayFormat>LE-{00000}</displayFormat>
        <label>Lobbying Expenditure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lobbying Expenditures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>