force-app/main/default/objects/Lobbying_Expenditure__c/fields/Brief_Summary__c.field-meta.xml
<CustomField>
    <fullName>Brief_Summary__c</fullName>
    <label>Brief Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>