force-app/main/default/objects/Lobbying_Expenditure__c/fields/Date_of_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expenditure__c</fullName>
    <label>Date of Expenditure</label>
    <required>true</required>
    <type>Date</type>
</CustomField>