force-app/main/default/objects/Lobbying_Expenditure__c/fields/Legal_Advocacy_Matter__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advocacy_Matter__c</fullName>
    <label>Legal Advocacy Matter</label>
    <referenceTo>Legal_Advocacy_Matter__c</referenceTo>
    <relationshipLabel>Lobbying Expenditures</relationshipLabel>
    <relationshipName>Lobbying_Expenditures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>