force-app/main/default/objects/Lobbying_Expenditure__c/fields/Lodging__c.field-meta.xml
<CustomField>
    <fullName>Lodging__c</fullName>
    <label>Lodging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>