force-app/main/default/objects/Lobbying_Expenditure__c/fields/Meals__c.field-meta.xml
<CustomField>
    <fullName>Meals__c</fullName>
    <label>Meals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>