force-app/main/default/objects/Lobbying_Expenditure__c/fields/Other_Expenditures__c.field-meta.xml
<CustomField>
    <fullName>Other_Expenditures__c</fullName>
    <inlineHelpText>Describe &quot;Other&quot; expenditure(s)</inlineHelpText>
    <label>Other Expenditure(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>