force-app/main/default/objects/Lobbying_Expenditure__c/fields/People_Lobbied__c.field-meta.xml
<CustomField>
    <fullName>People_Lobbied__c</fullName>
    <label>People Lobbied</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>