force-app/main/default/objects/Lobbying_Expenditure__c/fields/Tickets__c.field-meta.xml
<CustomField>
    <fullName>Tickets__c</fullName>
    <label>Tickets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>