force-app/main/default/objects/Lobbying_Expenditure__c/fields/Type_of_Lobbying__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Lobbying__c</fullName>
    <label>Type of Lobbying</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>State Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>